# aircraft-takeoff-speed-estimation

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
notebooks/: 00_initial_setup.ipynb  01_perspective_projection.ipynb  02_object_detection.ipynb
src/: annotator.py  main.py  path.py  speed_estimator.py  utils.py  video_processor.py  view_transformer.py
src/streamlit/: app.py
tests/: __init__.py  test_speed_estimator.py  test_video_processor.py  test_view_transformer.py
